# ibc-chat

./: .env.example  .gitignore  .taurignore  Cargo.toml  README.md  Taskfile.yml  deploy.json  network.json  relayer.json
.github/workflows/: build.yml
contracts/client/: Cargo.toml
contracts/client/src/: entry.rs  state.rs
contracts/client/src/state/: chat.rs  ibc.rs  meta.rs
contracts/server/: Cargo.toml
contracts/server/src/: entry.rs  lib.rs  state.rs
contracts/server/src/state/: ibc.rs
deployer/: Cargo.toml  package-lock.json  package.json  rollup.config.js
deployer/src/: config.rs  lib.rs  prelude.rs
deployer/src/action/: deploy.rs  migrate.rs  mod.rs
deployer/src/action/helpers/: ibc_port.rs  instantiate.rs  mod.rs  upload.rs
deployer/src/bindings/: crypto.rs  data.rs  file.rs  mod.rs
dev-tools/: README.md
dev-tools/cli/: Cargo.toml
dev-tools/cli/src/: args.rs  main.rs
dev-tools/processor/: Cargo.toml
dev-tools/processor/src/: monitor.rs
dev-tools/processor/src/monitor/: hash.rs  sources.rs  watcher.rs
dev-tools/shared/: Cargo.toml
dev-tools/shared/src/: lib.rs  process.rs  status.rs
dev-tools/tauri/: Cargo.toml  tauri.conf.json
dev-tools/tauri/capabilities/: main.json
dev-tools/tauri/src/: config.rs  main.rs
dev-tools/tauri/src/commands/: contract_status.rs  mod.rs  process.rs
dev-tools/web/: Cargo.toml  index.html
dev-tools/web/src/: config.rs  lib.rs  locale.rs  prelude.rs  route.rs  tauri.rs
dev-tools/web/src/atoms/: buttons.rs  dropdown.rs  image.rs  input.rs  mod.rs  sidebar.rs
dev-tools/web/src/atoms/dynamic_svg/: color_circle.rs
dev-tools/web/src/locale/error/: en.ftl
dev-tools/web/src/locale/landing/: he.ftl
dev-tools/web/src/page/: dashboard.rs  landing.rs  logs.rs  mod.rs  settings.rs
dev-tools/web/src/page/dashboard/: contract_deploy.rs  contract_status.rs
dev-tools/web/src/tauri/: commands.rs
dev-tools/web/src/theme/: misc.rs  mod.rs
dev-tools/web/src/util/: mixins.rs  mod.rs
frontend/: Cargo.toml  index.html
frontend/includes/: cosmjs.umd.js
frontend/src/: config.rs  lib.rs  prelude.rs  route.rs
frontend/src/atoms/: balance.rs  mod.rs
frontend/src/atoms/dynamic_svg/: mod.rs  more_arrow.rs
frontend/src/locale/common/: en.ftl
frontend/src/locale/landing/: en.ftl
frontend/src/page/: chat.rs  landing.rs  mod.rs  notfound.rs
frontend/src/page/chat/: display.rs  input.rs  window.rs
frontend/src/page/chat/window/: client.rs  server.rs
frontend/src/theme/: color.rs  misc.rs  responsive.rs  stylesheet.rs  typography.rs
gui-tools/gui/: Cargo.toml  index.html
gui-tools/gui/src/: config.rs  prelude.rs  route.rs  tauri.rs
gui-tools/gui/src/atoms/: buttons.rs  input.rs  mod.rs  sidebar.rs
gui-tools/gui/src/atoms/dynamic_svg/: color_circle.rs  mod.rs  more_arrow.rs
gui-tools/gui/src/locale/landing/: en.ftl
gui-tools/gui/src/page/: landing.rs  mod.rs
gui-tools/gui/src/page/landing/: contract_status.rs
gui-tools/gui/src/tauri/: commands.rs
gui-tools/gui/src/theme/: typography.rs
gui-tools/shared/: Cargo.toml
gui-tools/shared/src/: status.rs
gui-tools/tauri/: Cargo.toml  tauri.conf.json
gui-tools/tauri/src/: main.rs
gui-tools/tauri/src/commands/: contract_status.rs  mod.rs
offchain-tests/: Cargo.toml
offchain-tests/src/: app.rs  multitest_contract_impls.rs  prelude.rs
offchain-tests/tests/: integration.rs
onchain-tests/: Cargo.toml  package-lock.json  package.json  rollup.config.js
onchain-tests/src/: args.rs  config.rs  helpers.rs  lib.rs  prelude.rs  runner.rs
