[workspace]
members = [
    "contracts/*",
    "packages/*",
    "frontend",
    "deployer",
    "onchain-tests",
    "offchain-tests",
    "dev-tools/tauri",
    "dev-tools/web",
    "dev-tools/processor",
    "dev-tools/shared",
    "dev-tools/cli",
]

resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true