[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../packages/shared" }
wallet= { path = "../packages/wallet", features = ["node"] }
awsm_web = { version = "0.45.0", default-features = false }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
futures = "0.3.30"
wasm-bindgen-futures= "0.4.42"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.197"
serde_json = "1.0.114"
anyhow = "1.0.81"
thiserror = "1.0.58"
cfg-if = "1.0.0"
log = "0.4.21"
once_cell = "1.19.0"
gloo-events = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
cosmwasm-std = "2.0.3"
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
hex = "0.4.3"

[features]
default = ["wasm-logger", "console_error_panic_hook","awsm_web/unwrap_verbose"]
