[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = {path = "../packages/shared"}
wallet = {path = "../packages/wallet", features = ["web"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
futures = "0.3.30"
wasm-bindgen-futures= "0.4.42"
wasm-logger = { version = "0.2.0", optional = true }
serde-wasm-bindgen = "0.6.5"
serde = "1.0.197"
serde_json = "1.0.114"
anyhow = "1.0.81"
thiserror = "1.0.58"
cfg-if = "1.0.0"
log = "0.4.21"
console_error_panic_hook = { version = "0.1.7", optional = true }
dominator = "0.5.34"
futures-signals = "0.3.33"
awsm_web = { version = "0.45.0", features = ["loaders", "dom", "serde_iso", "stream"], default-features = false }
once_cell = "1.19.0"
gloo-events = "0.2.0"
gloo-timers = {version = "0.3.0", features = ["futures"]}
gloo-net = {version = "0.5.0", features = ["websocket"]}
dominator_helpers = { version = "0.8.0", default-features = false }
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
base64 = "0.22.0"
unic-langid = { version = "0.9.4", features = ["macros"] }
intl-memoizer = "0.5.1"
fluent = "0.16.0"
cosmwasm-std = "2.0.3"


[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "UrlSearchParams",
    "Node",
    "Window",
    "Navigator",
    "Clipboard",
    "Performance",
    "HtmlFormElement",
    "FileList",
    "MediaQueryList",
    "MediaQueryListEvent",
    "HtmlSelectElement",
    "Storage",
]
[features]
default = []
dev = ["wasm-logger", "console_error_panic_hook","awsm_web/unwrap_verbose"]