[package]
name = "dev-tools-cli"
version = "0.0.0"
description = "Dev Tools"
authors = ["Confio Team"]
edition = "2021"

[dependencies]
processor = {path = "../processor"}
shared = {path = "../../packages/shared"}
wallet = {path = "../../packages/wallet"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3"
