[package]
name = "dev-tools-tauri"
version = "0.0.0"
description = "Dev Tools"
authors = ["Confio Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
shared-dev-tools = {path = "../shared"}
processor = {path = "../processor"}
wallet = {path = "../../packages/wallet"}
shared = {path = "../../packages/shared"}
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
once_cell = "1.19.0"
